correct implementation of category pagination